--- a/Webtech/AS3/CSS/redesign.css
+++ b/Webtech/AS3/CSS/redesign.css
@@ -1,6 +1,3 @@
-@media (min-width: 2000px) { 
-
-}
 header{
     background-color: white;
 }
@@ -106,4 +103,25 @@ header > ul > li > .active{
 
 .inline-a{
     text-decoration: none;
+}
+
+@media (max-width: 1000px) { 
+    #sidenav{
+        display: none;
+    }
+    #wrapper{
+        width:100%;
+        margin-top: 110px;
+        margin-left: 50px
+    }
+    .main-content{
+        margin: 20px 0px;
+        padding: 10px 20px;
+        max-width: 800px;
+    }
+    .main-content .sectionB1{
+        padding: 10px 70px;
+        width: 120%;
+    }
+
 }
