--- a/close-to-water/css/main.css
+++ b/close-to-water/css/main.css
@@ -1,4 +1,7 @@
 /* general */
+#title{
+    font-family: source-han-serif-tc, serif;
+}
 .hide{
     display: none;
 }
@@ -35,7 +38,32 @@
     margin-top: 15px;
 }
 
+/* Cover */
+#cover{
+    background-image: url('../materials/cover_mod.gif');
+    background-size:cover;
+    background-attachment: fixed;
+    height:100vh;
+}
 
+#title {
+    color:white;
+    padding: 25%
+}
+
+#title h2{
+    font-size: 5rem;
+}
+
+#title h3{
+    font-size: 2.75rem;
+}
+
+#cover h2, #cover h3{
+    color: rgba(255, 245, 245, 0.962)
+}
+
+/* Cover end*/
 
 /* ch1 start */
 #ch1-video{
@@ -115,31 +143,48 @@
 }
 /* ch2 end */
 
+/* ch4 start */
 
-
-/* Cover */
-#cover{
-    background-image: url('../materials/cover_mod.gif');
-    background-size:cover;
-    background-attachment: fixed;
-    height:100vh;
+.interview{
+    width: 85%;
+    z-index: 20;
+    margin: 20% auto
 }
 
-#title {
-    color:white;
-    padding: 25%
+.interview-man, .interview-text {
+    width: 50%
 }
 
-#title h2{
-    font-size: 5rem;
+.interview-man img{
+    width: 85%;
+    height: 50vh
 }
 
-#title h3{
-    font-size: 2.75rem;
+.interview-text{
+    color:rgba(14, 1, 1, 0.962)
 }
 
-#cover h2, #cover h3{
-    color: rgba(255, 245, 245, 0.962)
+.slideshow-container{
+    display: flex;
+    width: 90%;
+    margin: auto
+}
+.slideshow img {
+    width: 98%;
+    height: 30vh;
 }
 
-/* Cover end*/
+/* footer */
+#area9{
+    background-color: rgb(230, 233, 248);
+    margin: 200px auto;
+    font-size: 1.75rem;
+}
+
+.text-block{
+    box-sizing: border-box;
+    width: 70%;
+    height: 40%;
+    margin: auto;
+    padding: 15%
+}
