--- a/close-to-water/css/main.css
+++ b/close-to-water/css/main.css
@@ -19,13 +19,13 @@
 }
 
 
-/* reading status aka progress bar */
-
+/* reading status aka progress bar start*/
 #fix-progress{
     background-color: white;
     width:100%;
     min-height: 75px;
     position:fixed;
+    z-index: 666;
 }
 
 #fix-progress img{
@@ -37,6 +37,7 @@
     width: 100%;
     margin-top: 15px;
 }
+/* reading status aka progress bar end*/
 
 /* Cover */
 #cover{
@@ -62,80 +63,91 @@
 #cover h2, #cover h3{
     color: rgba(255, 245, 245, 0.962)
 }
-
 /* Cover end*/
 
 /* ch1 start */
-#ch1-video{
-    min-width: 100%;
-    min-height: 50%;
-    width: 50%;
-    z-index: 3;
-}
-
-#area2{
+#area2 {
+    height: 500vh;
     display: flex;
 }
 
-#area2 .left-col, #area2 .right-col{
-    width: 45%;
-    margin-left: 10px
-}
+    #area2 .left-col, #area2 .right-col{
+        width: 45%;
+        margin-left: 10px
+    }
 
-#ch1-video-control.pos-ab{
-    display: flex;
-    position: absolute;
-    top: 20px;
-    align-items: center;
-}
+        #ch1-video-control{
+            position: sticky;
+            height:50vh;
+            top: 200px;
+            align-items: center;
+        }
+
+            #ch1-video{
+                min-width: 100%;
+                min-height: 50%;
+                width: 50%;
+                z-index: 3;
+            }
 
 /* ch2 start */
-#ch2-bg{
-    background-image: url('../materials/ch2_mod.gif');
-    background-size:cover;
-    background-attachment: fixed;
-    height:100vh;
-    width: 100vw;
+/* Note */
+#area4 {
+    height: 800vh
 }
 
-.law-container1{
-    display: flex;
-    float: left;
-    width: 50%;
-    margin-left: 20%;
-    margin-top: 5%
-}
+    #ch2-bg{
+        background-image: url('../materials/ch2_mod.gif');
+        background-size:cover;
+        background-attachment: fixed;
+        height: 120vh;
+        width: 100vw;
+        position: sticky;
+        position: -webkit-sticky;
+        top: 75px
+    }
+        .law-container{
+            position: relative;
+            display: flex;
+            top: 50px;
+            left: 200px;
+        }
 
-.law-container1 img{
-    width: 50%;
-    height: 55%;
-}
+        .law-pos1{
+            float: left;
+            width: 50%;
+            margin-left: 20%;
+            margin-top: 2%
+        }
 
-.law-container2{
-    display: flex;
-    float: right;
-    width: 45%;
-    margin-top: 5%;
-    margin-left: 60%;
-}
+            .law-pos1 img{
+                width: 50%;
+                height: 55%;
+            }
 
-.law-container2 img{
-    width: 30%;
-    height: 35%;
-}
+        .law-pos2{
+            float: right;
+            width: 45%;
+            margin-top: 2%;
+            margin-left: 60%;
+        }
 
-.law-container3{
-    display: flex;
-    float: left;
-    width: 45%;
-    margin-top: 5%;
-    margin-left: 40%;
-}
+            .law-pos2 img{
+                width: 30%;
+                height: 35%;
+            }
 
-.law-container3 img{
-    width: 30%;
-    height: 35%;
-}
+        .law-pos3{
+            float: left;
+            width: 45%;
+            margin-top: 2%;
+            margin-left: 40%;
+        }
+
+            .law-pos3 img{
+                width: 30%;
+                height: 35%;
+            }
 
 .law-text{
     box-sizing: border-box;
@@ -186,5 +198,5 @@
     width: 70%;
     height: 40%;
     margin: auto;
-    padding: 15%
+    padding: 10%
 }
