add trans & ch3
todo: ch2 bug

--- a/close-to-water/css/main.css
+++ b/close-to-water/css/main.css
@@ -10,14 +10,37 @@
     display: flex;
 }
 
-.chapter-title h1{
+.chapter-title-container{
     height: 10vh;
-    width: 110%;
+    width: 100%;
     background-color: white;
     padding: 15%;
+    color: #4cbbe3;
+    z-index: 2;
+}
+
+.chapter-title{
+    margin: 0 auto;
+    text-align: center;
+}
+
+.chapter-title h1{
+    background-color: white;
     color: #4cbbe3
 }
 
+.trans{
+    background-image: url('../materials/0-2_trans.jpg');
+    background-size:cover;
+    background-attachment: fixed;
+    height:50vh;
+}
+
+.trans-text{
+    width: 75%;
+    margin: 0 auto;
+    padding: 10%;
+}
 
 /* reading status aka progress bar start*/
 #fix-progress{
@@ -41,7 +64,7 @@
 
 /* Cover */
 #cover{
-    background-image: url('../materials/cover_mod.gif');
+    background-image: url('../materials/0-1_cover_v3.gif');
     background-size:cover;
     background-attachment: fixed;
     height:100vh;
@@ -65,183 +88,16 @@
 }
 /* Cover end*/
 
-/* ch1 start */
-#area2 {
-    height: 1200vh;
-    display: flex;
+/* article intro */
+#article-intro{
+    width: 100%;
+    margin-top: 150px;
+    align-self: center;
+    font-size: 1.5rem;
 }
 
-    #area2 .left-col, #area2 .right-col{
-        width: 45%;
-        margin-left: 10px
-    }
-
-        #ch1-video-control{
-            position: sticky;
-            height: 50vh;
-            top: 200px;
-            align-items: center;
-        }
-
-            #ch1-video{
-                min-width: 100%;
-                min-height: 80%;
-                width: 50%;
-                z-index: 3;
-            }
-
-        #ch1-supplement{
-            position: fixed;
-            height: 50vh;
-            top: 160px;
-            right: 100px;
-            align-items: center;
-            margin: auto;
-            z-index: 40;
-        }
-            #ch1-supplement img{
-                height: 45vh;
-                width: 50vw;
-            }
-
-            #ch1-supplement .ch1-text{
-                padding: 10px
-            }
-
-/* ch2 start */
-#area4 {
-    min-height: 300vh;
-    height: 400vh
-}
-
-    #ch2-bg{
-        background-image: url('../materials/ch2_mod.gif');
-        background-size:cover;
-        background-attachment: fixed;
-        height: 120vh;
-        width: 110vw;
-        position: sticky;
-        position: -webkit-sticky;
-        top: 75px;
-        overflow-x: hidden;
-        z-index: 6;
-
-    }
-        .law-container{
-            position: relative;
-            display: flex;
-            width: 70vw;
-            margin: 5px auto;
-        }
-
-        .law-container.law-pos1{
-            left: 10vw;
-        }
-
-        .law-container.law-pos2{
-            top: -30vh;
-        }
-
-            .rocksize1 img{
-                width: 16vw;  /*30vw 400px*/
-                height: 70vh; /*40vh 350px*/
-            }
-
-            .rocksize1 .law-text{
-                width: 30vw;
-                padding: 5vh;
-                align-self: center;
-                position: relative;
-                top: -10vh
-            }
-        
-
-        .law-container.law-pos3{
-            left: -15vw;
-            top: -60vh
-        }
-
-        .law-container.law-pos4{
-            left: 5vw;
-            top: -80vh
-        }
-
-            .rocksize2 img{
-                width: 50vw;  /*30vw*/
-                height: 60vh; /*40vh*/
-            }
-
-            .rocksize2 .law-text{
-                width: 175vw;
-                padding: 5vh;
-                align-self: center;
-            }
-
-            .rocksize3 img{
-                width: 40vw;  /*30vw*/
-                height: 80vh; /*40vh*/
-            }
-
-        .law-container.law-pos5{
-            left: 0vw;
-            top: -120vh
-        }
-
-            .rocksize3 .law-text{
-                width: 175vw;
-                padding: 5vh;
-                align-self: center;
-                position: relative;
-                top: 10vh
-            }           
-/* ch2 end */
-
-/* ch4 start */
-
-.interview{
-    width: 85%;
-    z-index: 20;
-    margin: 20% auto
-}
-
-.interview-man, .interview-text {
-    width: 50%
-}
-
-.interview-man img{
-    width: 85%;
-    height: 50vh
-}
-
-.interview-text{
-    color:rgba(14, 1, 1, 0.962)
-}
-
-.slideshow-container{
-    display: flex;
-    width: 90%;
-    margin: auto
-}
-.slideshow img {
-    width: 98%;
-    height: 30vh;
-}
-
-#area8 .slides{
-    height: 75%;
-}
-
-/* footer */
-#area9{
-    background-color: rgb(230, 233, 248);
-    margin: 200px auto;
-    font-size: 1.75rem;
-}
-
-.text-block{
-    box-sizing: border-box;
-    width: 70%;
-    height: 40%;
-    margin: auto;
-    padding: 10%
+#article-intro .pt15{
+    width: 80%;
+    padding-top: 35px;
+    margin: 0 auto;
 }
