modify content & design

--- a/close-to-water/css/chapter.css
+++ b/close-to-water/css/chapter.css
@@ -35,7 +35,7 @@
         }
             #ch1-supplement img{
                 height: 45vh;
-                width: 50vw;
+                width: 47vw;
             }
 
             #ch1-supplement .ch1-text{
@@ -157,8 +157,8 @@
 }
 
 .interview-man img{
-    width: 85%;
-    height: 50vh
+    width: 490px;
+    height: 350px
 }
 
 .interview-text{
