--- a/close-to-water/css/main.css
+++ b/close-to-water/css/main.css
@@ -1,44 +1,50 @@
 /* general */
-#title{
+#title {
     font-family: source-han-serif-tc, serif;
 }
 
-.hide{
+.hide {
     display: none;
 }
 
-.flex{
+.flex {
     display: flex;
 }
 
-.chapter-title-container{
+.chapter-title-container {
     height: 10vh;
     width: 100%;
     background-color: white;
     padding: 15%;
-    color: #4cbbe3; /*#4cbbe3*/
+    color: #4cbbe3;
+    /*#4cbbe3*/
     z-index: 2;
 }
 
-.chapter-title{
+.chapter-title {
     margin: 0 auto;
     text-align: center;
 }
 
-.chapter-title h1{
+.chapter-title h1 {
     background-color: white;
     color: #1995c2
 }
 
-.trans{
+.chapter-name{
+    color: #0b4b87;
+    align-self: center;
+}
+
+.trans {
     background-image: url('../materials/0-2_trans.jpg');
-    background-size:cover;
+    background-size: cover;
     background-attachment: fixed;
-    height:100vh;
+    height: 100vh;
     opacity: 0.7;
 }
 
-.trans-text{
+.trans-text {
     width: 85%;
     margin: 0 auto;
     padding: 10%;
@@ -46,46 +52,58 @@
     vertical-align: middle;
 }
 
-#ch2-intro .trans-text{
+#ch2-intro .trans-text {
     position: relative;
     left: 15%
 }
 
-.trans-text .pt5{
+.trans-text .pt5 {
     padding-top: 20px;
 }
 
-#fix-progress{
+#fix-progress {
     background-color: white;
-    width:100%;
-    min-height: 75px;
-    position:fixed;
+    width: 100%;
+    position: fixed;
     z-index: 666;
 }
 
-#fix-progress img{
+#fix-progress img {
     width: 8%;
     height: 10%;
 }
 
-.status-container{
+.status-container {
     width: 100%;
-    margin-top: 15px;
+    margin: 10px 0;
 }
 
-.progress-container {
+.progress-container-v1 {
     width: 100%;
     height: 75px;
-  }
-  
-  .progress-bar {
+}
+
+.progress-container-v2 {
+    width: 100%;
+    height: 10px;
+    background-color: #e6eef7;
+}
+
+.progress-bar-v1 {
     height: 75px;
     background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRhT9AXpUqUyMjILJ9qn9PDvXpdXE-iqbc-HMXHfU04s6rJ0fbT);
     animation: animate 60s linear infinite;
     width: 0%;
-  }
+}
 
-  @keyframes animate {
+.progress-bar-v2 {
+    height: 10px;
+    width: 0%;
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRhT9AXpUqUyMjILJ9qn9PDvXpdXE-iqbc-HMXHfU04s6rJ0fbT);
+    animation: animate 60s linear infinite;
+}
+
+@keyframes animate {
     0% {
         background-position: left 2px top 40px;
     }
@@ -94,46 +112,52 @@
         background-position: left 80px top -50px;
     }
 
+    60% {
+        background-position: left 250px top 50px;
+    }
+
     80% {
         background-position: left 400px top 50px;
     }
 }
 
 /* Cover */
-#cover{
+#cover {
     background-image: url('../materials/0-1_cover_v3.gif');
-    background-size:cover;
+    background-size: cover;
     background-attachment: fixed;
-    height:100vh;
+    height: 100vh;
 }
 
 #title {
-    color:white;
+    color: white;
     padding: 25%
 }
 
-#title h2{
+#title h2 {
     font-size: 5rem;
 }
 
-#title h3{
+#title h3 {
     font-size: 2.75rem;
 }
 
-#cover h2, #cover h3{
+#cover h2,
+#cover h3 {
     color: rgba(255, 245, 245, 0.962)
 }
+
 /* Cover end*/
 
 /* article intro */
-#article-intro{
+#article-intro {
     width: 100%;
     margin-top: 150px;
     align-self: center;
     font-size: 1.5rem;
 }
 
-#article-intro .pt15{
+#article-intro .pt15 {
     width: 80%;
     padding-top: 35px;
     margin: 0 auto;
