--- a/close-to-water/css/chapter.css
+++ b/close-to-water/css/chapter.css
@@ -149,11 +149,11 @@
 .interview{
     width: 85%;
     z-index: 20;
-    margin: 20% auto
+    margin: 150px auto
 }
 
 .interview-man, .interview-text {
-    width: 50%
+    width: 45%;
 }
 
 .interview-man img{
@@ -162,7 +162,8 @@
 }
 
 .interview-text{
-    color:rgba(14, 1, 1, 0.962)
+    color:rgba(14, 1, 1, 0.962);
+    margin-left: 30px;
 }
 
 .slideshow-container{
@@ -170,19 +171,30 @@
     width: 90%;
     margin: auto
 }
-.slideshow img {
-    width: 98%;
-    height: 30vh;
-}
 
 #area8 .slides{
     height: 75%;
 }
 
+#carousel1, #carousel2{
+    width: 90%;
+    height: 50vh;
+    margin: 0 auto;
+}
+
+#interviewer1 img, #interviewer2 img{
+    width: 50vw; /*560px*/
+    height: 55vh; /*280px*/
+}
+
+#carousel1 .carousel-inner, #carousel2 .carousel-inner{
+    left: 25%
+}
+
 /* footer */
 #area9{
     background-color: #ceeafc;
-    margin: auto;
+    margin-top: 120px;
     font-size: 1.2rem;
 }
 
